--- a/styles/styles.css
+++ b/styles/styles.css
@@ -355,6 +355,7 @@ ul li::before {
   min-height: 100vh;
   display: flex;
   align-items: center;
+  margin: 0;
 }
 .top-section h1 {
   text-align: center;
